--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ height: 100%;">
        background-image: url('./bg_desk.png');
        background-repeat: no-repeat;
        background-size: cover;
+       background-color: red;
    }
    .link{
        width: 100%;
@@ -34,7 +35,7 @@ height: 100%;">
 </head>
 <body>
    <div class="backdrop" >
-       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=tonakaistudio@gmail.com&su=Domain-related" target="_blank" class="link" id='mailTo'></a>
+       <a href="https://www.rapidtables.com/tools/notepad.html" target="_blank" class="link" id='mailTo'></a>
    </div>
 </body>
 </html>
